--- a/po/sl.po
+++ b/po/sl.po
@@ -4,26 +4,27 @@ msgstr ""
 "Project-Id-Version: libfm\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-10-24 11:11+0200\n"
-"PO-Revision-Date: \n"
-"Last-Translator: Matej Gačnik <paxmanpwnz@gmail.com>\n"
+"PO-Revision-Date: 2011-02-12 22:28+0200\n"
+"Last-Translator: Klemen <klemen.kosir@gmx.com>\n"
 "Language-Team: paxman <paxmanpwnz@gmail.com>\n"
-"Language: \n"
+"Language: sl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=(n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || n"
-"%100==4 ? 2 : 3);\n"
+"Plural-Forms: nplurals=4; plural=(n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || "
+"n%100==4 ? 2 : 3);\n"
+"X-Generator: Pootle 2.0.5\n"
 "X-Poedit-Language: Slovenian\n"
 "X-Poedit-SourceCharset: utf-8\n"
 "X-Poedit-Country: SLOVENIA\n"
 
 #: ../data/ui/app-chooser.glade.h:1
 msgid "<b>Command line to execute:</b>"
-msgstr "<b>Izvedi ukaz:</b>"
+msgstr "<b>Ukaz, ki bo izveden:</b>"
 
 #: ../data/ui/app-chooser.glade.h:2
 msgid "<b>File Type To be Opened:</b>"
-msgstr "<b>Odpri tip datoteke:</b>"
+msgstr "<b>Vrsta datoteke:</b>"
 
 #: ../data/ui/app-chooser.glade.h:4
 #, no-c-format
@@ -38,27 +39,27 @@ msgstr ""
 "  <b>%f</b>: predstavlja eno ime datoteke\n"
 "  <b>%F</b>: predstavlja več imen datotek\n"
 "  <b>%u</b>: predstavlja en URI datoteke\n"
-"  <b>%U</b>: predstavlja več URI datotek"
+"  <b>%U</b>: predstavlja več URI-jev datotek"
 
 #: ../data/ui/app-chooser.glade.h:9
 msgid "Choose An Application"
-msgstr "Izberi program"
+msgstr "Izberite program"
 
 #: ../data/ui/app-chooser.glade.h:10
 msgid "Custom Command Line"
-msgstr "Ukazna vrstica po meri"
+msgstr "Ukaz po meri"
 
 #: ../data/ui/app-chooser.glade.h:11
 msgid "Execute in terminal emulator"
-msgstr "Odpri v konzoli"
+msgstr "Izvedi v terminalu"
 
 #: ../data/ui/app-chooser.glade.h:12
 msgid "Installed Application"
-msgstr "Nameščen program"
+msgstr "Nameščeni programi"
 
 #: ../data/ui/app-chooser.glade.h:13
 msgid "Set selected application as default action of this file type"
-msgstr "Nastavi izbrani program kot privzeto dejanje za datoteke tega tipa"
+msgstr "Nastavi izbrani program kot privzeto dejanje za datoteke te vrste"
 
 #: ../data/ui/app-chooser.glade.h:14
 msgid "_Browse"
@@ -80,7 +81,7 @@ msgstr "To možnost uporabi za vse obstoječe datoteke"
 
 #: ../data/ui/ask-rename.glade.h:5
 msgid "Confirm to replace files"
-msgstr "Potrdi zamenjavo datotek"
+msgstr "Potrdite zamenjavo datotek"
 
 #: ../data/ui/ask-rename.glade.h:6
 msgid "File Name:"
@@ -92,15 +93,15 @@ msgstr "_Prepiši"
 
 #: ../data/ui/ask-rename.glade.h:8
 msgid "_Rename"
-msgstr "_Preimenuj"
+msgstr "P_reimenuj"
 
 #: ../data/ui/ask-rename.glade.h:9
 msgid "_Skip"
-msgstr "_Preskoči"
+msgstr "Pre_skoči"
 
 #: ../data/ui/ask-rename.glade.h:10
 msgid "with the following file?"
-msgstr "s to datoteko?"
+msgstr "s sledečo datoteko?"
 
 #: ../data/ui/file-prop.glade.h:1
 msgid "---"
@@ -108,11 +109,11 @@ msgstr "---"
 
 #: ../data/ui/file-prop.glade.h:2
 msgid "<b>Access Control</b>"
-msgstr "<b>Dostop<b>"
+msgstr "<b>Dostop</b>"
 
 #: ../data/ui/file-prop.glade.h:3
 msgid "<b>File Type:</b>"
-msgstr "<b>Tip datoteke:</b>"
+msgstr "<b>Vrsta datoteke:</b>"
 
 #: ../data/ui/file-prop.glade.h:4
 msgid "<b>Group:</b>"
@@ -136,7 +137,7 @@ msgstr "<b>Odpri _z:</b>"
 
 #: ../data/ui/file-prop.glade.h:9
 msgid "<b>Other:</b>"
-msgstr "<b>Drugo:</b>"
+msgstr "<b>Drugi:</b>"
 
 #: ../data/ui/file-prop.glade.h:10
 msgid "<b>Owner:</b>"
@@ -152,7 +153,7 @@ msgstr "<b>Cilj:</b>"
 
 #: ../data/ui/file-prop.glade.h:13
 msgid "<b>Total Size of Files:</b>"
-msgstr "<b>Skupna velikost datotek:</b>"
+msgstr "<b>Skupna velikost:</b>"
 
 #: ../data/ui/file-prop.glade.h:14
 msgid "<b>_Group:</b>"
@@ -168,7 +169,7 @@ msgstr "Lastnosti datoteke"
 
 #: ../data/ui/file-prop.glade.h:17
 msgid "Make the file executable"
-msgstr "Naredi datoteko izvršljivo"
+msgstr "Naredi datoteko izvedljivo"
 
 #: ../data/ui/file-prop.glade.h:18
 msgid "None"
@@ -176,16 +177,16 @@ msgstr "Brez"
 
 #: ../data/ui/file-prop.glade.h:19
 msgid "Operations that all other users can do"
-msgstr "Dejanja, ki jih lahko izvršijo vsi ostali uporabniki"
+msgstr "Dejanja, ki jih lahko izvedejo vsi ostali uporabniki"
 
 #: ../data/ui/file-prop.glade.h:20
 msgid "Operations that the owner of the file can do"
-msgstr "Dejanja, ki jih lahko izvrši lastnik datoteke"
+msgstr "Dejanja, ki jih lahko izvede lastnik datoteke"
 
 #: ../data/ui/file-prop.glade.h:21
 msgid "Operations that users in the same group as the owner of the file can do"
 msgstr ""
-"Dejanja, ki jih lahko izvršijo uporabniki iz iste skupine kot lastnik "
+"Dejanja, ki jih lahko izvedejo uporabniki iz iste skupine kot lastnik "
 "datoteke"
 
 #: ../data/ui/file-prop.glade.h:22
@@ -198,7 +199,7 @@ msgstr "Samo branje"
 
 #: ../data/ui/file-prop.glade.h:24
 msgid "Select the application used to open files of this type "
-msgstr "Izberite program s katerim želite odpreti datoteke tega tipa"
+msgstr "Izberite program, s katerim želite odpreti datoteke te vrste "
 
 #: ../data/ui/file-prop.glade.h:25
 msgid "Write only"
@@ -215,15 +216,15 @@ msgstr "_Dovoljenja"
 #. Processing: <Name of currently proccesed file>
 #: ../data/ui/progress.glade.h:2
 msgid "<b>Processing:</b>"
-msgstr "<b>Obdelujem:</b>"
+msgstr "<b>Obdelovanje:</b>"
 
 #: ../data/ui/progress.glade.h:3
 msgid "<b>Progress:</b>"
-msgstr "<b>Končano:</b>"
+msgstr "<b>Napredek:</b>"
 
 #: ../data/ui/progress.glade.h:4
 msgid "<b>Some errors occurred:</b>"
-msgstr "<b>Prišlo je do napak:<b>"
+msgstr "<b>Pojavile so se napake:</b>"
 
 #: ../data/ui/progress.glade.h:5
 msgid "<b>Time remaining:</b>"
@@ -232,12 +233,12 @@ msgstr "<b>Preostali čas:</b>"
 #. To: <Destination folder> ex. Copy file to..., Move file to...etc.
 #: ../data/ui/progress.glade.h:7
 msgid "<b>To:</b>"
-msgstr "<b>Cilj:</b>"
+msgstr "<b>V:</b>"
 
 #. Preparing to do some file operation (Copy, Move, Delete...)
 #: ../data/ui/progress.glade.h:9
 msgid "Preparing..."
-msgstr "Pripravljam..."
+msgstr "Pripravljanje ..."
 
 #: ../data/ui/preferred-apps.glade.h:1
 msgid "<b>Mail client</b>"
@@ -245,7 +246,7 @@ msgstr "<b>Poštni odjemalec</b>"
 
 #: ../data/ui/preferred-apps.glade.h:2
 msgid "<b>Terminal Emulator</b>"
-msgstr "<b>Konzola</b>"
+msgstr "<b>Terminal</b>"
 
 #: ../data/ui/preferred-apps.glade.h:3
 msgid "<b>Web Browser</b>"
@@ -261,7 +262,7 @@ msgstr "Datotečne povezave"
 
 #: ../data/ui/preferred-apps.glade.h:6 ../data/libfm-pref-apps.desktop.in.h:1
 msgid "Preferred Applications"
-msgstr "Privzeti programi"
+msgstr "Prednostni programi"
 
 #: ../data/ui/preferred-apps.glade.h:7
 msgid "System Applications"
@@ -272,31 +273,30 @@ msgid ""
 "The preferred Mail Client will be used to compose emails when you click on E-"
 "mail addresses."
 msgstr ""
-"Ob kliku na E-mail naslov bo za sestavo sporočila uporabljen privzeti poštni "
-"odjemalec"
+"Ob kliku na naslov elektronske pošte bo za sestavo sporočila uporabljen "
+"prednostni poštni odjemalec."
 
 #: ../data/ui/preferred-apps.glade.h:9
 msgid "The preferred Web Browser will be used to open hyperlinks."
-msgstr "Za odprtje spletnega naslova bo uporabljen privzeti spletni brskalnik"
+msgstr ""
+"Za odprtje spletnega naslova bo uporabljen prednostni spletni brskalnik."
 
 #: ../data/ui/exec-file.glade.h:1
-#, fuzzy
 msgid "Execute File"
-msgstr "Več datotek"
+msgstr "Izvedi datoteko"
 
 #: ../data/ui/exec-file.glade.h:2
-#, fuzzy
 msgid "Execute in _Terminal"
-msgstr "Odpri v konzoli"
+msgstr "Izvedi v _terminalu"
 
 #: ../src/base/fm-utils.c:54 ../src/base/fm-utils.c:83
 #, c-format
 msgid "%u byte"
 msgid_plural "%u bytes"
-msgstr[0] "%u bit"
-msgstr[1] "%u bita"
-msgstr[2] "%u biti"
-msgstr[3] "%u bitov"
+msgstr[0] "%u bajt"
+msgstr[1] "%u bajta"
+msgstr[2] "%u bajti"
+msgstr[3] "%u bajtov"
 
 #: ../src/base/fm-utils.c:61
 msgid "KB"
@@ -340,7 +340,7 @@ msgstr "Priklopna točka"
 
 #: ../src/base/fm-path.c:729
 msgid "Trash Can"
-msgstr "Koš"
+msgstr "Smeti"
 
 #: ../src/base/fm-path.c:731
 msgid "My Computer"
@@ -365,7 +365,7 @@ msgid ""
 "Size: %s\n"
 "Modified: %s"
 msgstr ""
-"Tyip: %s\n"
+"Vrsta: %s\n"
 "Velikost: %s\n"
 "Spremenjeno: %s"
 
@@ -375,35 +375,34 @@ msgid ""
 "Type: %s\n"
 "Modified: %s"
 msgstr ""
-"Tip: %s\n"
+"Vrsta: %s\n"
 "Spremenjeno: %s"
 
 #: ../src/gtk/fm-progress-dlg.c:310
 msgid "The file operation is cancelled and there are some errors."
-msgstr "Dejanje nad datoteko je bila prekinjeno in prišlo je do napak"
+msgstr "Dejanje nad datoteko je bilo preklicano in pojavile so se napake."
 
 #: ../src/gtk/fm-progress-dlg.c:312
 msgid "Cancelled"
-msgstr "Prekinjeno"
+msgstr "Preklicano"
 
 #: ../src/gtk/fm-progress-dlg.c:316
 msgid "The file operation is finished, but there are some errors."
-msgstr "Dejanje nad datoteko je bila končano, a je prišlo do napak"
+msgstr "Dejanje nad datoteko je bilo končano, vendar so se pojavile napake."
 
 #: ../src/gtk/fm-progress-dlg.c:318
 msgid "Finished"
 msgstr "Končano"
 
 #: ../src/gtk/fm-progress-dlg.c:336
-#, fuzzy
 msgid ""
 "Some files cannot be moved to trash can because the underlying file systems "
 "don't support this operation.\n"
 "Do you want to delete them instead?"
 msgstr ""
-"Nekaterih datotek ni mogoče premakniti v koš, saj datotečni sistem ne "
-"podpira te operacije. \n"
-"Želite namesto tega izbrisati datoteke?"
+"Nekaterih datotek ni mogoče premakniti v smeti, ker datotečni sistem tega "
+"dejanja ne podpira.\n"
+"Ali želite namesto tega datoteke izbrisati?"
 
 #: ../src/gtk/fm-progress-dlg.c:430
 msgid ", "
@@ -419,7 +418,7 @@ msgstr "Kopiranje datotek"
 
 #: ../src/gtk/fm-progress-dlg.c:451
 msgid "Trashing files"
-msgstr "Brisanje datotek"
+msgstr "Premikanje datotek v smeti"
 
 #: ../src/gtk/fm-progress-dlg.c:454
 msgid "Deleting files"
@@ -434,30 +433,30 @@ msgid "Changing file attributes"
 msgstr "Spreminjanje atributov datotek"
 
 #: ../src/gtk/fm-file-properties.c:117 ../src/gtk/fm-file-properties.c:122
-#, fuzzy
 msgid "byte"
 msgid_plural "bytes"
-msgstr[0] "%u bit"
-msgstr[1] "%u bita"
-msgstr[2] "%u biti"
-msgstr[3] "%u bitov"
+msgstr[0] "bajt"
+msgstr[1] "bajta"
+msgstr[2] "bajti"
+msgstr[3] "bajtov"
 
 #: ../src/gtk/fm-file-properties.c:176
 msgid "Please enter a valid user name or numeric id."
-msgstr "Vnesite veljavno uporabniško ime ali številčni ID"
+msgstr "Vnesite veljavno uporabniško ime ali ID"
 
 #: ../src/gtk/fm-file-properties.c:208
 msgid "Please enter a valid group name or numeric id."
-msgstr "Vnesite veljavno ime skupine ali številčni ID"
+msgstr "Vnesite veljavno ime skupine ali ID"
 
 #: ../src/gtk/fm-file-properties.c:356
 msgid ""
 "Do you want to recursively apply these changes to all files and sub-folders?"
-msgstr "Želite rekurzivno uporabiti spremembe na vseh podmapah in datotekah?"
+msgstr ""
+"Ali želite rekurzivno uveljaviti te spremembe na vseh datotekah in podmapah?"
 
 #: ../src/gtk/fm-file-properties.c:630
 msgid "Files of different types"
-msgstr "Datoteke različnih tipov"
+msgstr "Datoteke različnih vrst"
 
 #: ../src/gtk/fm-file-properties.c:663
 msgid "Multiple Files"
@@ -473,7 +472,7 @@ msgstr "Odklopi nosilec"
 
 #: ../src/gtk/fm-places-view.c:83
 msgid "Eject Removable Media"
-msgstr "Izvrzi izmenljiv medij"
+msgstr "Izvrzi odstranljiv nosilec"
 
 #. FIXME: we need to set a proper parent window for the dialog
 #: ../src/gtk/fm-places-view.c:96 ../src/gtk/fm-places-view.c:660
@@ -482,11 +481,11 @@ msgstr "Preimenuj zaznamek"
 
 #: ../src/gtk/fm-places-view.c:97
 msgid "Remove from Bookmark"
-msgstr "Odstrani iz zaznamkov"
+msgstr "Odstrani zaznamek"
 
 #: ../src/gtk/fm-places-view.c:109
 msgid "Empty Trash"
-msgstr "Izprazni koš"
+msgstr "Izprazni smeti"
 
 #: ../src/gtk/fm-places-view.c:661
 msgid "Enter a new name:"
@@ -494,7 +493,7 @@ msgstr "Vnesite novo ime:"
 
 #: ../src/gtk/fm-file-menu.c:86 ../src/gtk/fm-file-menu.c:87
 msgid "Open With..."
-msgstr "Odpri z..."
+msgstr "Odpri z ..."
 
 #: ../src/gtk/fm-file-menu.c:92
 msgid "Rename"
@@ -506,19 +505,19 @@ msgstr "Ustvari simbolno povezavo"
 
 #: ../src/gtk/fm-file-menu.c:94
 msgid "Send To"
-msgstr "Pošlji na/v/k"
+msgstr "Pošlji"
 
 #: ../src/gtk/fm-file-menu.c:95
 msgid "Compress..."
-msgstr "Stisni..."
+msgstr "Stisni ..."
 
 #: ../src/gtk/fm-file-menu.c:96
 msgid "Extract Here"
-msgstr "Izvleci tu"
+msgstr "Razširi sem"
 
 #: ../src/gtk/fm-file-menu.c:97
 msgid "Extract To..."
-msgstr "Izvleci v"
+msgstr "Razširi v ..."
 
 #: ../src/gtk/fm-file-menu.c:258
 msgid "_Restore"
@@ -526,7 +525,7 @@ msgstr "_Obnovi"
 
 #: ../src/gtk/fm-file-menu.c:259
 msgid "Restore trashed files to original paths"
-msgstr "Obnovi datoteke v smeteh na svojo prvotno mesto"
+msgstr "Obnovi datoteke v smeteh na prvotno mesto"
 
 #: ../src/gtk/fm-dnd-dest.c:450
 msgid "XDirectSave failed."
@@ -534,11 +533,11 @@ msgstr "XDirectSave ni uspel."
 
 #: ../src/gtk/fm-app-chooser-dlg.c:96
 msgid "Use selected application to open files"
-msgstr "Datoteke odpri z izbranim programom"
+msgstr "Datoteke odprite z izbranim programom"
 
 #: ../src/gtk/fm-app-chooser-dlg.c:103
 msgid "Execute custom command line to open files"
-msgstr "Za odprtje datotek izvrši ukaz po meri"
+msgstr "Datoteke odprite z ukazom po meri"
 
 #: ../src/gtk/fm-app-chooser-combo-box.c:185
 msgid "Customize"
@@ -570,19 +569,19 @@ msgstr "Napaka"
 
 #: ../src/gtk/fm-gtk-utils.c:278
 msgid "Please select a folder"
-msgstr "Izberite ciljno mapo"
+msgstr "Izberite mapo"
 
 #: ../src/gtk/fm-gtk-utils.c:425
 msgid "Only system administrators have the permission to do this."
-msgstr "Le sistemski administrators ima pravico za to dejanje"
+msgstr "Za to dejanje imajo pravico le skrbniki sistema"
 
 #: ../src/gtk/fm-gtk-utils.c:504
 msgid "Do you want to move the selected files to trash can?"
-msgstr "Želite premakniti izbrane datoteke v koš?"
+msgstr "Ali želite premakniti izbrane datoteke v smeti?"
 
 #: ../src/gtk/fm-gtk-utils.c:525
 msgid "Do you want to delete the selected files?"
-msgstr "Želite izbrisati izbrane datoteke v koš?"
+msgstr "Ali želite izbrisati izbrane datoteke?"
 
 #: ../src/gtk/fm-gtk-utils.c:571
 msgid "Rename File"
@@ -594,7 +593,7 @@ msgstr "Vnesite novo ime:"
 
 #: ../src/gtk/fm-gtk-utils.c:593
 msgid "Are you sure you want to empty the trash can?"
-msgstr "Ste prepričani, da želite izprazniti koš?"
+msgstr "Ali ste prepričani, da želite izprazniti smeti?"
 
 #: ../src/gtk/fm-gtk-file-launcher.c:86
 #, c-format
@@ -602,11 +601,13 @@ msgid ""
 "This text file '%s' seems to be an executable script.\n"
 "What do you want to do with it?"
 msgstr ""
+"Besedilna datoteka '%s' je izvedljivi skript.\n"
+"Kaj želite storiti?"
 
 #: ../src/gtk/fm-gtk-file-launcher.c:93
 #, c-format
 msgid "This file '%s' is executable. Do you want to execute it?"
-msgstr ""
+msgstr "Datoteka '%s' je izvedljiva. Ali jo želite izvesti?"
 
 #: ../src/job/fm-dir-list-job.c:231 ../src/job/fm-dir-list-job.c:240
 #: ../src/job/fm-dir-list-job.c:337
@@ -632,7 +633,7 @@ msgstr "Cilj je podmapa izvora."
 
 #: ../src/gtk/fm-places-model.c:426
 msgid "Trash"
-msgstr "Koš"
+msgstr "Smeti"
 
 #: ../src/gtk/fm-places-model.c:480
 msgid "Desktop"
@@ -641,160 +642,160 @@ msgstr "Namizje"
 #. Translator: The word "blank" is used as an adjective, e.g. we are decsribing discs that are already blank
 #: ../src/udisks/g-udisks-device.c:41
 msgid "CD-ROM Disc"
-msgstr ""
+msgstr "CD-ROM disk"
 
 #: ../src/udisks/g-udisks-device.c:41
 msgid "Blank CD-ROM Disc"
-msgstr ""
+msgstr "Prazen CD-ROM disk"
 
 #: ../src/udisks/g-udisks-device.c:42
 msgid "CD-R Disc"
-msgstr ""
+msgstr "CD-R disk"
 
 #: ../src/udisks/g-udisks-device.c:42
 msgid "Blank CD-R Disc"
-msgstr ""
+msgstr "Prazen CD-R disk"
 
 #: ../src/udisks/g-udisks-device.c:43
 msgid "CD-RW Disc"
-msgstr ""
+msgstr "CD-RW disk"
 
 #: ../src/udisks/g-udisks-device.c:43
 msgid "Blank CD-RW Disc"
-msgstr ""
+msgstr "Prazen CD-RW disk"
 
 #: ../src/udisks/g-udisks-device.c:44 ../src/udisks/g-udisks-device.c:45
 msgid "DVD-ROM Disc"
-msgstr ""
+msgstr "DVD-ROM disk"
 
 #: ../src/udisks/g-udisks-device.c:44 ../src/udisks/g-udisks-device.c:45
 msgid "Blank DVD-ROM Disc"
-msgstr ""
+msgstr "Prazen DVD-ROM disk"
 
 #: ../src/udisks/g-udisks-device.c:46
 msgid "DVD-RW Disc"
-msgstr ""
+msgstr "DVD-RW disk"
 
 #: ../src/udisks/g-udisks-device.c:46
 msgid "Blank DVD-RW Disc"
-msgstr ""
+msgstr "Prazen DVD-RW disk"
 
 #: ../src/udisks/g-udisks-device.c:47
 msgid "DVD-RAM Disc"
-msgstr ""
+msgstr "DVD-RAM disk"
 
 #: ../src/udisks/g-udisks-device.c:47
 msgid "Blank DVD-RAM Disc"
-msgstr ""
+msgstr "Prazen DVD-RAM disk"
 
 #: ../src/udisks/g-udisks-device.c:48
 msgid "DVD+R Disc"
-msgstr ""
+msgstr "DVD+R disk"
 
 #: ../src/udisks/g-udisks-device.c:48
 msgid "Blank DVD+R Disc"
-msgstr ""
+msgstr "Prazen DVD+R disk"
 
 #: ../src/udisks/g-udisks-device.c:49
 msgid "DVD+RW Disc"
-msgstr ""
+msgstr "DVD+RW disk"
 
 #: ../src/udisks/g-udisks-device.c:49
 msgid "Blank DVD+RW Disc"
-msgstr ""
+msgstr "Prazen DVD+RW disk"
 
 #: ../src/udisks/g-udisks-device.c:50
 msgid "DVD+R DL Disc"
-msgstr ""
+msgstr "DVD+R DL disk"
 
 #: ../src/udisks/g-udisks-device.c:50
 msgid "Blank DVD+R DL Disc"
-msgstr ""
+msgstr "Prazen DVD+R DL disk"
 
 #: ../src/udisks/g-udisks-device.c:51
 msgid "DVD+RW DL Disc"
-msgstr ""
+msgstr "DVD+RW DL disk"
 
 #: ../src/udisks/g-udisks-device.c:51
 msgid "Blank DVD+RW DL Disc"
-msgstr ""
+msgstr "Prazen DVD+RW DL disk"
 
 #: ../src/udisks/g-udisks-device.c:52
 msgid "Blu-Ray Disc"
-msgstr ""
+msgstr "Blu-Ray disk"
 
 #: ../src/udisks/g-udisks-device.c:52
 msgid "Blank Blu-Ray Disc"
-msgstr ""
+msgstr "Prazen Blu-Ray disk"
 
 #: ../src/udisks/g-udisks-device.c:53
 msgid "Blu-Ray R Disc"
-msgstr ""
+msgstr "Blu-Ray R disk"
 
 #: ../src/udisks/g-udisks-device.c:53
 msgid "Blank Blu-Ray R Disc"
-msgstr ""
+msgstr "Prazen Blu-Ray R disk"
 
 #: ../src/udisks/g-udisks-device.c:54
 msgid "Blu-Ray RW Disc"
-msgstr ""
+msgstr "Blu-Ray RW disk"
 
 #: ../src/udisks/g-udisks-device.c:54
 msgid "Blank Blu-Ray RW Disc"
-msgstr ""
+msgstr "Prazen Blu-Ray RW disk"
 
 #: ../src/udisks/g-udisks-device.c:55
 msgid "HD DVD Disc"
-msgstr ""
+msgstr "HD DVD disk"
 
 #: ../src/udisks/g-udisks-device.c:55
 msgid "Blank HD DVD Disc"
-msgstr ""
+msgstr "Prazen HD DVD disk"
 
 #: ../src/udisks/g-udisks-device.c:56
 msgid "HD DVD-R Disc"
-msgstr ""
+msgstr "HD DVD-R disk"
 
 #: ../src/udisks/g-udisks-device.c:56
 msgid "Blank HD DVD-R Disc"
-msgstr ""
+msgstr "Prazen HD DVD-R disk"
 
 #: ../src/udisks/g-udisks-device.c:57
 msgid "HD DVD-RW Disc"
-msgstr ""
+msgstr "HD DVD-RW disk"
 
 #: ../src/udisks/g-udisks-device.c:57
 msgid "Blank HD DVD-RW Disc"
-msgstr ""
+msgstr "Prazen HD DVD-RW disk"
 
 #: ../src/udisks/g-udisks-device.c:58
 msgid "MO Disc"
-msgstr ""
+msgstr "MO disk"
 
 #: ../src/udisks/g-udisks-device.c:58
 msgid "Blank MO Disc"
-msgstr ""
+msgstr "Prazen MO disk"
 
 #: ../src/udisks/g-udisks-device.c:59
 msgid "MRW Disc"
-msgstr ""
+msgstr "MRW disk"
 
 #: ../src/udisks/g-udisks-device.c:59
 msgid "Blank MRW Disc"
-msgstr ""
+msgstr "Prazen MRW disk"
 
 #: ../src/udisks/g-udisks-device.c:60
 msgid "MRW/W Disc"
-msgstr ""
+msgstr "MRW/W disk"
 
 #: ../src/udisks/g-udisks-device.c:60
 msgid "Blank MRW/W Disc"
-msgstr ""
+msgstr "Prazen MRW/W disk"
 
 #: ../src/udisks/g-udisks-device.c:299
 msgid "Blank Optical Disc"
-msgstr ""
+msgstr "Prazen optični disk"
 
 #: ../src/udisks/g-udisks-device.c:301
 msgid "Optical Disc"
-msgstr ""
+msgstr "Optični disk"
